Fixed: Sort indicator wraps on Search page Source column

--- a/frontend/src/Search/Table/SearchIndexHeader.css
+++ b/frontend/src/Search/Table/SearchIndexHeader.css
@@ -1,7 +1,7 @@
 .protocol {
   composes: headerCell from '~Components/Table/VirtualTableHeaderCell.css';
 
-  flex: 0 0 60px;
+  flex: 0 0 90px;
 }
 
 .title {
