--- a/frontend/src/Search/Table/SearchIndexRow.css
+++ b/frontend/src/Search/Table/SearchIndexRow.css
@@ -8,7 +8,7 @@
 .protocol {
   composes: cell;
 
-  flex: 0 0 60px;
+  flex: 0 0 90px;
 }
 
 .title {
